--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@formspree/react": "^2.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-json-pretty": "^2.2.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.37.4",
     "tslib": "^2.3.1",
